@@ -1,3 +1,9 @@
+2010-04-28	The InnoDB Team
+
+	* log/log0recv.h, log/log0recv.c:
+	Fix Bug#53122 InnoDB recovery uses too big a hash table for redo
+	log records
+
 2010-04-27	The InnoDB Team
 
 	* handler/ha_innodb.cc, lock/lock0lock.c, row/row0mysql.c,
